pkg/style.css
@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Literata:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Quicksand:wght@300;400;500;600;700&display=swap');

@font-face {
  font-family: 'InconsolataNerdFontMono'; 
  src: url('/pkg/InconsolataNerdFontMono-Regular.woff2') format('woff2');
}

:root {
  --primary-color: #b28970;
  --secondary-color: #8c6b58;
  --background-color: #f5f5f5;
  --heading-background: hsla(0, 0%, 0%, 3%);
  --light-background-color: #e9dcd6;
  --border-color: #ccc;
  --light-text-color: #fff;
  --dark-text-color: #000;
  --light-shadow: #000;
  --dark-shadow: #fff;
  --box-shadow-color: #777;
}

html.dark {
	--primary-color: hsl(27, 32%, 39%);
  --secondary-color: hsl(27, 20%, 50%);
  --background-color: hsl(0, 0%, 10%);
  --heading-background: hsla(0, 0%, 100%, 3%);
  --light-background-color: hsl(27, 20%, 9%);
  --border-color: hsl(0, 0%, 20%);
  --light-text-color: hsl(0, 0%, 0%);
  --dark-text-color: hsl(0, 0%, 100%);
  --light-shadow: hsl(0, 0%, 100%);
  --dark-shadow: hsl(0, 0%, 0%);
  --box-shadow-color: hsl(0, 0%, 39%);
}

html, body {
	margin: 0;
	padding: 0;
	border: 0;
}

body {
	display: flex;
	justify-content: center;
	flex-direction: column;
	width: 100%;
	height: 100vh;
	margin: 0 auto;
	background: var(--background-color);
	color: var(--dark-text-color);
	font-family: 'Quicksand', sans-serif;
	line-height: 1.5rem;
	font-weight: 500;
}

blockquote {
	font-family: 'Dancing Script', cursive;
	font-size: 150%;
	font-weight: bold;
	line-height: 1.8rem;
}

main {
	flex: 1;
	overflow: auto;
	padding: 1.5rem 0;
}

footer {
	flex: 0;
	align-items: center;
	justify-content: center;
	display: flex;
	flex-direction: row;
	padding: 0.3em;
}

header {
	display: block;
	justify-content: center;
	align-items: center;
	font-size: 1.2em;
	margin: 0 auto;
	width: -moz-available;
	width: -webkit-fill-available;
	width: stretch;
}

header nav {
	display: flex;
	align-items: center;
	justify-content: space-between;
	width: 100%;
	height: 100%;
	padding: 0;
	margin: 0;
	position: relative;
}

header nav span {
	flex-grow: 1;
}

header nav div {
	display: flex;
	align-items: center;
}

nav a, nav label, nav button {
	margin: 5px 1rem 5px 0;
	padding: 0.5rem 1rem;
}

nav a, nav label {
	border-radius: 1.5rem 0 1.5rem 0;
}

nav button {
	border-radius: 1.5rem;
}

nav label {
	margin-left: auto;
	display: none;
}

nav input {
	display: none;
}

@media only screen and (max-width: 900px) {
	header nav {
		display: grid;
		grid-template-columns: auto 1fr auto auto;
	}
  nav button#theme {
    justify-self: flex-start;
  }
	nav label {
		display: block;
	}
	nav a:not(:first-child) {
		display: none;
	}
	nav input:checked~a:not(:first-child) {
		display: block;
		grid-column-start: 1;
		grid-column-end: 5;
	}
}

main form {
	display: flex;
	flex-direction: column;
	width: 49%;
	height: 100%;
	align-items: center;
	font-size: 120%;
}

main form textarea {
	width: 100%;
	flex: 1;
}

main:has(>form) {
	display: flex;
	flex-direction: row;
}

main form button {
	padding: 10px;
	height: 3em;
}

a, nav label, body button, form button {
	background-color: var(--primary-color);
	color: var(--light-text-color);
	text-decoration: none;
	font-weight: bold;
	border: 1px var(--border-color) solid;
	box-shadow: 0 0.3rem 0.3rem 0.1rem var(--border-color);
}

body>button, body form>* {
	padding: 6px 6px;
	border-radius: 4px;
	margin-left: 6px;
}

body form input {
	border: 1px solid var(--border-color);
}

body form {
	display: inline-block;
}

main a {
	padding: 0.1rem 0.5rem;
	border-radius: 0.6rem;
}

h1, h2, h3, h4 {
	color: var(--secondary-color);
	background-color: var(--heading-background);
	font-family: 'Literata', serif;
	padding: 0.3rem min(3rem, 5%);
	box-shadow: 0 0.2rem 0.4rem var(--box-shadow-color);
}

code {
	font-family: InconsolataNerdFontMono;
	font-size: 300%;
	line-height: 0.5em;
	vertical-align: middle;
	margin-right: 0.25em;
	color: var(--primary-color);
}

h1, h2, h3, h4, p {
	min-height: 1em;
}

header, main p, main ul {
	padding: 0 min(3rem, 5%);
}

main ul, main ol{
	margin-left: 2em;
}

main form input, main form textarea {
	padding: 0.5rem;
	border: 1px var(--border-color) solid;
	border-radius: 0.5rem;
	width: -moz-available;
	width: -webkit-fill-available;
	width: stretch;
}

main form input {
	line-height: 1em
}

main form textarea {
	height: 8rem;
}

main form input[type=submit] {
	width: auto;
	background-color: var(--primary-color);
	font-weight: bold;
	color: var(--light-text-color);
	box-shadow: 0 0.3rem 0.3rem 0.1rem var(--box-shadow-color);
}

.presentation {
	display: flex;
	flex-direction: row;
	border-radius: 0 5rem 0 5rem;
	overflow: hidden;
	background-color: var(--light-background-color);
	margin: 0 3rem;
	box-shadow: 0 0.3rem 0.3rem 0.1rem var(--border-color);
}

.presentation>div {
	flex: 1;
}

.presentation>div p.info {
	text-align: right;
	align-self: flex-end;
}

.presentation aside {
	flex: 0;
}

.presentation aside img {
	aspect-ratio: 3/4;
	width: 240px;
}

.presentation aside button {
	width: 100%;
	background-color: var(--primary-color);
	color: var(--light-text-color);
	border: 0 none;
	font-size: 1.2rem;
	padding: 0.5rem;
}

@media only screen and (max-width: 900px) {
.presentation {
	flex-direction: column;
	min-height: 100px;
	width: 100%;
}
.presentation aside {
	order: -1;
}
.presentation aside img {
	width: 100%;
}
}

#notification {
    display: none;
    padding: 10px;
    position: absolute;
    right: 3.5rem;
    top: 3.5rem;
}

#notification.success {
    border: 1px solid green;
    background-color: #e6ffe6;  /* light green background */
    display: block;
}

#notification.failure {
    border: 1px solid red;
    background-color: #ffe6e6;  /* light red background */
    display: block;
}

footer>a {
  font-family: 'InconsolataNerdFontMono';
  font-size: 300%;
  line-height: 0.5em;
  color: var(--primary-color);
  font-weight: 300;
	padding: 0;
	border: 0 none;
	margin: 0 0 0 0.3em;
	background: transparent;
	padding: 0.1em;
	box-shadow: none;
	vertical-align: middle;
}

textarea#content {
	font-family: 'InconsolataNerdFontMono';
	font-weight: 400;
	font-size: 150%;
}

fieldset {
	display: grid;
	grid-template-columns: 1fr 2fr;
	gap: 0.5em;
	align-items: center;
}

fieldset label {
	justify-self: end;
}

fieldset input {
	justify-self: start;
	box-shadow: 0 0 3px var(--border-color);
	background: var(--background-color);
	color: var(--dark-text-color);
}

fieldset button {
	grid-column-start: 1;
	grid-column-end: 3;
	justify-self: center;
}

button#theme {
	font-family: "InconsolataNerdFontMono";
	font-size: 120%;
}

